--- a/LimeStudio/app/src/main/res/drawable/btn_flat_keyboard_function_key_pressed_pink.xml
+++ b/LimeStudio/app/src/main/res/drawable/btn_flat_keyboard_function_key_pressed_pink.xml
@@ -1,35 +1,48 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
   ~ /*
-  ~  *
   ~  **    Copyright 2015, The LimeIME Open Source Project
   ~  **
-  ~  **    Project Url: http://github.com/lime-ime/limeime/
+  ~  **    Project Url: http://github.com/jrywu/limeime/
   ~  **                 http://android.toload.net/
   ~  **
   ~  **    This program is free software: you can redistribute it and/or modify
   ~  **    it under the terms of the GNU General Public License as published by
   ~  **    the Free Software Foundation, either version 3 of the License, or
   ~  **    (at your option) any later version.
-  ~  *
+  ~
   ~  **    This program is distributed in the hope that it will be useful,
   ~  **    but WITHOUT ANY WARRANTY; without even the implied warranty of
   ~  **    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
   ~  **    GNU General Public License for more details.
-  ~  *
+  ~
   ~  **    You should have received a copy of the GNU General Public License
   ~  **    along with this program.  If not, see <http://www.gnu.org/licenses/>.
-  ~  *
   ~  */
   -->
 
-<TextView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
-    android:layout_height="120sp"
-    android:textSize="40sp"
-    android:textColor="@color/limekeyboard_key_color_light_hl"
-    android:minWidth="32dip"
-    android:gravity="center|top"
-    android:background="@drawable/btn_flat_keyboard_key_feedback"
-    android:text="W"
-    />
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
+    android:shape="rectangle" >
+    <corners
+        android:radius="3dp"
+        />
+    <solid
+        android:color="#FFF173AC"
+        />
+    <padding
+        android:left="1dp"
+        android:top="1dp"
+        android:right="1dp"
+        android:bottom="1dp"
+        />
+    <size
+        android:width="30dp"
+        android:height="46dp"
+        />
+
+    <stroke
+        android:width="1dp"
+        android:color="#FFFAD5E5"
+        />
+
+</shape>
