--- a/LimeStudio/app/src/main/res/drawable/btn_flat_keyboard_key_preview_dark.xml
+++ b/LimeStudio/app/src/main/res/drawable/btn_flat_keyboard_key_preview_dark.xml
@@ -1,42 +1,50 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-
 <!--
   ~ /*
+  ~  *
   ~  **    Copyright 2015, The LimeIME Open Source Project
   ~  **
-  ~  **    Project Url: http://github.com/jrywu/limeime/
+  ~  **    Project Url: http://github.com/lime-ime/limeime/
   ~  **                 http://android.toload.net/
   ~  **
   ~  **    This program is free software: you can redistribute it and/or modify
   ~  **    it under the terms of the GNU General Public License as published by
   ~  **    the Free Software Foundation, either version 3 of the License, or
   ~  **    (at your option) any later version.
-  ~
+  ~  *
   ~  **    This program is distributed in the hope that it will be useful,
   ~  **    but WITHOUT ANY WARRANTY; without even the implied warranty of
   ~  **    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
   ~  **    GNU General Public License for more details.
-  ~
+  ~  *
   ~  **    You should have received a copy of the GNU General Public License
   ~  **    along with this program.  If not, see <http://www.gnu.org/licenses/>.
+  ~  *
   ~  */
   -->
 
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
-	<!-- Functional keys. -->
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
+    android:shape="rectangle" >
+    <corners
+        android:radius="3dp"
+        />
+    <solid
+        android:color="#FF212121"
+        />
+    <padding
+        android:left="1dp"
+        android:top="1dp"
+        android:right="1dp"
+        android:bottom="1dp"
+        />
+    <size
+        android:width="50dp"
+        android:height="80dp"
+        />
 
-    <item android:state_single="true" android:state_pressed="true"
-          android:drawable="@drawable/btn_flat_keyboard_function_key_pressed_dark" />
-    <item android:state_single="true"
-          android:drawable="@drawable/btn_flat_keyboard_function_key_normal_dark"/>
+    <stroke
+        android:width="2dp"
+        android:color="#B0C8C8C8"
+        />
 
-
-    <!-- Normal keys -->
-
-    <item android:state_pressed="true"
-          android:drawable="@drawable/btn_flat_keyboard_normal_key_pressed_dark" />
-    <item
-          android:drawable="@drawable/btn_flat_keyboard_normal_key_normal_dark" />
-          
-</selector>
+</shape>
