--- a/LimeStudio/app/src/main/res/drawable/btn_keyboard_key_popup_light.xml
+++ b/LimeStudio/app/src/main/res/drawable/btn_keyboard_key_popup_light.xml
@@ -24,12 +24,8 @@
   -->
 
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:state_checkable="true" android:state_checked="true" android:state_pressed="true"
-        android:drawable="@drawable/sym_flat_keyboard_shift_normal_unlocked" />
-    <item android:state_checkable="true" android:state_checked="true"
-        android:drawable="@drawable/sym_flat_keyboard_shift_locked" />
-    <item android:state_checkable="true" android:state_pressed="true"
-        android:drawable="@drawable/sym_flat_keyboard_shift_pressed_unlocked" />
-    <item android:state_checkable="true"
-        android:drawable="@drawable/sym_flat_keyboard_shift_normal_unlocked" />
+
+    <item android:state_pressed="true"
+          android:drawable="@drawable/btn_flat_keyboard_normal_key_pressed_light" />
+    <item android:drawable="@drawable/btn_flat_keyboard_normal_key_normal_light" />
 </selector>
