--- a/LimeStudio/app/src/main/res/drawable/btn_keyboard_key_popup_pink.xml
+++ b/LimeStudio/app/src/main/res/drawable/btn_keyboard_key_popup_pink.xml
@@ -1,6 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-
 <!--
   ~ /*
   ~  **    Copyright 2015, The LimeIME Open Source Project
@@ -24,19 +22,8 @@
   -->
 
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-	<!-- Functional keys. -->
-
-    <item android:state_single="true" android:state_pressed="true"
-          android:drawable="@drawable/btn_flat_keyboard_function_key_pressed_dark" />
-    <item android:state_single="true"
-          android:drawable="@drawable/btn_flat_keyboard_function_key_normal_dark"/>
-
-
-    <!-- Normal keys -->
 
     <item android:state_pressed="true"
-          android:drawable="@drawable/btn_flat_keyboard_normal_key_pressed_dark" />
-    <item
-          android:drawable="@drawable/btn_flat_keyboard_normal_key_normal_dark" />
-          
+          android:drawable="@drawable/btn_flat_keyboard_normal_key_pressed_pink" />
+    <item android:drawable="@drawable/btn_flat_keyboard_normal_key_normal_pink" />
 </selector>
