--- a/LimeStudio/app/src/main/res/drawable/keyboard_key_preview_background_pink.xml
+++ b/LimeStudio/app/src/main/res/drawable/keyboard_key_preview_background_pink.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-
 <!--
   ~ /*
   ~  *
@@ -26,19 +25,5 @@
   -->
 
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-	<!-- Functional keys. -->
-
-    <item android:state_single="true" android:state_pressed="true"
-          android:drawable="@drawable/btn_flat_keyboard_function_key_pressed" />
-    <item android:state_single="true"
-          android:drawable="@drawable/btn_flat_keyboard_function_key_normal"/>
-
-
-    <!-- Normal keys -->
-
-    <item android:state_pressed="true"
-          android:drawable="@drawable/btn_flat_keyboard_key_pressed" />
-    <item
-          android:drawable="@drawable/btn_flat_keyboard_key_normal" />
-          
+    <item   android:drawable="@drawable/btn_flat_keyboard_key_preview_pink" />
 </selector>
