--- a/LimeStudio/app/src/main/res/drawable/keyboard_popup_panel_background_pink.xml
+++ b/LimeStudio/app/src/main/res/drawable/keyboard_popup_panel_background_pink.xml
@@ -1,6 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-
 <!--
   ~ /*
   ~  **    Copyright 2015, The LimeIME Open Source Project
@@ -23,20 +21,21 @@
   ~  */
   -->
 
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
-	<!-- Functional keys. -->
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
+    android:shape="rectangle" >
+    <corners
+        android:radius="1.5dp"
+        />
+    <solid
+        android:color="#FFFAD5E5"
+        />
+    <padding
+        android:left="1dp"
+        android:top="1dp"
+        android:right="1dp"
+        android:bottom="1dp"
+        />
 
-    <item android:state_single="true" android:state_pressed="true"
-          android:drawable="@drawable/btn_flat_keyboard_function_key_pressed_dark" />
-    <item android:state_single="true"
-          android:drawable="@drawable/btn_flat_keyboard_function_key_normal_dark"/>
 
 
-    <!-- Normal keys -->
-
-    <item android:state_pressed="true"
-          android:drawable="@drawable/btn_flat_keyboard_normal_key_pressed_dark" />
-    <item
-          android:drawable="@drawable/btn_flat_keyboard_normal_key_normal_dark" />
-          
-</selector>
+</shape>
