--- a/LimeStudio/app/src/main/res/drawable/sym_keyboard_return_pink.xml
+++ b/LimeStudio/app/src/main/res/drawable/sym_keyboard_return_pink.xml
@@ -1,5 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
-
 <!--
   ~ /*
   ~  *
@@ -25,5 +24,9 @@
   -->
 
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item   android:drawable="@drawable/btn_flat_keyboard_key_feedback" />
+    <item android:state_pressed="true"
+        android:drawable="@drawable/sym_flat_keyboard_enter_dark" />
+    <item
+        android:drawable="@drawable/sym_flat_keyboard_enter_dark" />
+
 </selector>
