--- a/LimeStudio/app/src/main/res/drawable/sym_keyboard_shift_shifted_pink.xml
+++ b/LimeStudio/app/src/main/res/drawable/sym_keyboard_shift_shifted_pink.xml
@@ -1,6 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-
 <!--
   ~ /*
   ~  **    Copyright 2015, The LimeIME Open Source Project
@@ -24,19 +22,16 @@
   -->
 
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-	<!-- Functional keys. -->
+    <item android:state_checkable="true" android:state_checked="true" android:state_pressed="true"
+        android:drawable="@drawable/sym_flat_keyboard_shift_pressed_unlocked_pink" />
+    <item android:state_checkable="true" android:state_checked="true"
+        android:drawable="@drawable/sym_flat_keyboard_shift_locked_pink" />
+    <item android:state_checkable="true" android:state_pressed="true"
+        android:drawable="@drawable/sym_flat_keyboard_shift_normal_unlocked_dark" />
+    <item android:state_checkable="true"
+        android:drawable="@drawable/sym_flat_keyboard_shift_pressed_unlocked_pink" />
 
-    <item android:state_single="true" android:state_pressed="true"
-          android:drawable="@drawable/btn_flat_keyboard_function_key_pressed_dark" />
-    <item android:state_single="true"
-          android:drawable="@drawable/btn_flat_keyboard_function_key_normal_dark"/>
 
 
-    <!-- Normal keys -->
 
-    <item android:state_pressed="true"
-          android:drawable="@drawable/btn_flat_keyboard_normal_key_pressed_dark" />
-    <item
-          android:drawable="@drawable/btn_flat_keyboard_normal_key_normal_dark" />
-          
 </selector>
