--- a/LimeStudio/app/src/main/res/values-zh-rCN/strings_settings.xml
+++ b/LimeStudio/app/src/main/res/values-zh-rCN/strings_settings.xml
@@ -672,12 +672,14 @@
         <string-array name="keyboard_themes_options">
             <item>浅色</item>
             <item>深色</item>
+            <item>粉紅</item>
         </string-array>
 
 
         <string-array name="keyboard_themes_values">
             <item>0</item>
             <item>1</item>
+            <item>2</item>
         </string-array>
 
 
