--- a/LimeStudio/app/src/main/res/values/styles.xml
+++ b/LimeStudio/app/src/main/res/values/styles.xml
@@ -26,7 +26,9 @@
 
     <style name="LIMEAlertDialogTheme" parent="@android:style/Theme.DeviceDefault.Dialog">
     </style>
-    <style name="LIMEKeyboardLight">
+    <style name="LIMEKeyboard">
+        <item name="spaceKeyVerticalCorrection">@dimen/spacebar_vertical_correction</item>
+        <item name="spaceKeySlidingTextSize">@dimen/spacebar_preview_text_size</item>
         <item name="spaceKeyIcon">@drawable/sym_keyboard_space</item>
         <item name="spaceKeyPreviewIcon">@drawable/sym_flat_keyboard_space</item>
         <item name="enterKeyIcon">@drawable/sym_keyboard_return</item>
@@ -37,12 +39,26 @@
         <item name ="deleteKeyIcon">@drawable/sym_keyboard_delete</item>
         <item name ="shiftKeyIcon">@drawable/sym_keyboard_shift</item>
         <item name ="shiftKeyShiftedIcon">@drawable/sym_keyboard_shift_shifted</item>
-        <item name="spaceKeyVerticalCorrection">@dimen/spacebar_vertical_correction</item>
-        <item name="spaceKeySlidingTextSize">@dimen/spacebar_preview_text_size</item>
-        <item name="spaceKeySlidingLeftArrow">@drawable/ic_suggest_strip_scroll_left_arrow</item>
-        <item name="spaceKeySlidingRightArrow">@drawable/ic_suggest_strip_scroll_right_arrow</item>
+        <item name="spaceKeyTextColor">@color/limekeyboard_function_key_color_light</item>
+        <item name="spaceKeySlidingLeftArrow">@drawable/sym_keyboard_previous_light</item>
+        <item name="spaceKeySlidingRightArrow">@drawable/sym_keyboard_next_light</item>
     </style>
-    <style name="LIMEKeyboardDark">
+    <style name="LIMEKeyboard.Light" parent = "LIMEKeyboard">
+        <item name="spaceKeyIcon">@drawable/sym_keyboard_space</item>
+        <item name="spaceKeyPreviewIcon">@drawable/sym_flat_keyboard_space</item>
+        <item name="enterKeyIcon">@drawable/sym_keyboard_return</item>
+        <item name="enterKeyPreviewIcon">@drawable/sym_keyboard_return</item>
+        <item name="searchKeyIcon">@drawable/sym_keyboard_search</item>
+        <item name="searchKeyPreviewIcon">@drawable/sym_keyboard_search</item>
+        <item name ="doneKeyIcon">@drawable/sym_keyboard_done</item>
+        <item name ="deleteKeyIcon">@drawable/sym_keyboard_delete</item>
+        <item name ="shiftKeyIcon">@drawable/sym_keyboard_shift</item>
+        <item name ="shiftKeyShiftedIcon">@drawable/sym_keyboard_shift_shifted</item>
+        <item name="spaceKeyTextColor">@color/limekeyboard_function_key_color_light</item>
+        <item name="spaceKeySlidingLeftArrow">@drawable/sym_keyboard_previous_light</item>
+        <item name="spaceKeySlidingRightArrow">@drawable/sym_keyboard_next_light</item>
+    </style>
+    <style name="LIMEKeyboard.Dark" parent = "LIMEKeyboard">
         <item name="spaceKeyIcon">@drawable/sym_keyboard_space_dark</item>
         <item name="spaceKeyPreviewIcon">@drawable/sym_flat_keyboard_space</item>
         <item name="enterKeyIcon">@drawable/sym_keyboard_return_dark</item>
@@ -53,13 +69,12 @@
         <item name ="deleteKeyIcon">@drawable/sym_keyboard_delete_dark</item>
         <item name ="shiftKeyIcon">@drawable/sym_keyboard_shift</item>
         <item name ="shiftKeyShiftedIcon">@drawable/sym_keyboard_shift_shifted</item>
-        <item name="spaceKeyVerticalCorrection">@dimen/spacebar_vertical_correction</item>
-        <item name="spaceKeySlidingTextSize">@dimen/spacebar_preview_text_size</item>
-        <item name="spaceKeySlidingLeftArrow">@drawable/ic_suggest_strip_scroll_left_arrow</item>
-        <item name="spaceKeySlidingRightArrow">@drawable/ic_suggest_strip_scroll_right_arrow</item>
+        <item name="spaceKeyTextColor">@color/limekeyboard_function_key_color_dark</item>
+        <item name="spaceKeySlidingLeftArrow">@drawable/sym_keyboard_previous_light</item>
+        <item name="spaceKeySlidingRightArrow">@drawable/sym_keyboard_next_light</item>
     </style>
 
-    <style name="LIMEKeyboardPink">
+    <style name="LIMEKeyboard.Pink" parent = "LIMEKeyboard">
         <item name="spaceKeyIcon">@drawable/sym_keyboard_space_pink</item>
         <item name="spaceKeyPreviewIcon">@drawable/sym_flat_keyboard_space_dark</item>
         <item name="enterKeyIcon">@drawable/sym_keyboard_return_pink</item>
@@ -70,36 +85,41 @@
         <item name ="deleteKeyIcon">@drawable/sym_keyboard_delete_pink</item>
         <item name ="shiftKeyIcon">@drawable/sym_keyboard_shift_pink</item>
         <item name ="shiftKeyShiftedIcon">@drawable/sym_keyboard_shift_shifted_pink</item>
-        <item name="spaceKeyVerticalCorrection">@dimen/spacebar_vertical_correction</item>
-        <item name="spaceKeySlidingTextSize">@dimen/spacebar_preview_text_size</item>
-        <item name="spaceKeySlidingLeftArrow">@drawable/ic_suggest_strip_scroll_left_arrow</item>
-        <item name="spaceKeySlidingRightArrow">@drawable/ic_suggest_strip_scroll_right_arrow</item>
+        <item name="spaceKeyTextColor">@color/limekeyboard_function_key_color_pink</item>
+        <item name="spaceKeySlidingLeftArrow">@drawable/sym_keyboard_previous_dark</item>
+        <item name="spaceKeySlidingRightArrow">@drawable/sym_keyboard_next_dark</item>
     </style>
 
-
-    <style name="LIMEKeyboardLayoutLight">
+    <style name="LIMEKeyboardLayout">
         <item name="android:background">@drawable/keyboard_background_light</item>
         <item name="android:keyBackground">@drawable/btn_keyboard_key_light</item>
     </style>
-    <style name="LIMEKeyboardLayoutDark">
+    <style name="LIMEKeyboardLayout.Light" parent = "LIMEKeyboardLayout">
+        <item name="android:background">@drawable/keyboard_background_light</item>
+        <item name="android:keyBackground">@drawable/btn_keyboard_key_light</item>
+    </style>
+    <style name="LIMEKeyboardLayout.Dark" parent = "LIMEKeyboardLayout">
         <item name="android:background">@drawable/keyboard_background_dark</item>
         <item name="android:keyBackground">@drawable/btn_keyboard_key_dark</item>
     </style>
-    <style name="LIMEKeyboardLayoutPink">
+    <style name="LIMEKeyboardLayout.Pink" parent = "LIMEKeyboardLayout">
         <item name="android:background">@drawable/keyboard_background_pink</item>
         <item name="android:keyBackground">@drawable/btn_keyboard_key_pink</item>
     </style>
 
-
-    <style name="LIMEPopupKeyboardLayoutLight">
+    <style name="LIMEPopupKeyboardLayout">
         <item name="android:background">@drawable/keyboard_popup_panel_background_light</item>
         <item name="android:keyBackground">@drawable/btn_keyboard_key_light</item>
     </style>
-    <style name="LIMEPopupKeyboardLayoutDark">
+    <style name="LIMEPopupKeyboardLayout.Light" parent = "LIMEPopupKeyboardLayout">
+        <item name="android:background">@drawable/keyboard_popup_panel_background_light</item>
+        <item name="android:keyBackground">@drawable/btn_keyboard_key_light</item>
+    </style>
+    <style name="LIMEPopupKeyboardLayout.Dark" parent = "LIMEPopupKeyboardLayout">
         <item name="android:background">@drawable/keyboard_popup_panel_background_dark</item>
         <item name="android:keyBackground">@drawable/btn_keyboard_key_dark</item>
     </style>
-    <style name="LIMEPopupKeyboardLayoutPink">
+    <style name="LIMEPopupKeyboardLayout.Pink" parent = "LIMEPopupKeyboardLayout">
         <item name="android:background">@drawable/keyboard_popup_panel_background_pink</item>
         <item name="android:keyBackground">@drawable/btn_keyboard_key_pink</item>
     </style>
@@ -122,7 +142,7 @@
         <item name="backgroundDimAmount">0.5</item>
         <item name="symbolColorScheme">white</item>
     </style>
-    <style name="LIMEKeyboardBaseView.Light">
+    <style name="LIMEKeyboardBaseView.Light" parent = "LIMEKeyboardBaseView">
         <item name="keyPreviewLayout">@layout/key_preview_light</item>
         <item name="android:background">@drawable/keyboard_background_light</item>
         <item name="keyBackground">@drawable/btn_keyboard_key_light</item>
@@ -139,7 +159,7 @@
         <item name="keySubLabelTextColorPressed">@color/limekeyboard_subkey_color_light_hl</item>
 
     </style>
-    <style name="LIMEKeyboardBaseView.Pink">
+    <style name="LIMEKeyboardBaseView.Pink" parent = "LIMEKeyboardBaseView">
         <item name="keyPreviewLayout">@layout/key_preview_pink</item>
         <item name="android:background">@drawable/keyboard_background_pink</item>
         <item name="keyBackground">@drawable/btn_keyboard_key_pink</item>
@@ -157,7 +177,7 @@
 
     </style>
 
-    <style name="LIMEKeyboardBaseView.Dark">
+    <style name="LIMEKeyboardBaseView.Dark" parent = "LIMEKeyboardBaseView">
         <item name="keyPreviewLayout">@layout/key_preview_dark</item>
         <item name="android:background">@drawable/keyboard_background_dark</item>
         <item name="keyBackground">@drawable/btn_keyboard_key_dark</item>
@@ -183,14 +203,19 @@
         <item name="android:windowExitAnimation">@anim/mini_keyboard_fadeout</item>
     </style>
 
-    <style name="LIMEBaseKeyboardLight">
-
+    <style name="LIMEBaseKeyboard">
         <item name="drawableArrowUp">@drawable/sym_keyboard_up</item>
         <item name="drawableArrowDown">@drawable/sym_keyboard_down</item>
         <item name="drawableArrowRight">@drawable/sym_keyboard_right</item>
         <item name="drawableArrowLeft">@drawable/sym_keyboard_left</item>>
     </style>
-    <style name="LIMEBaseKeyboardDark">
+    <style name="LIMEBaseKeyboard.Light" parent = "LIMEBaseKeyboard">
+        <item name="drawableArrowUp">@drawable/sym_keyboard_up</item>
+        <item name="drawableArrowDown">@drawable/sym_keyboard_down</item>
+        <item name="drawableArrowRight">@drawable/sym_keyboard_right</item>
+        <item name="drawableArrowLeft">@drawable/sym_keyboard_left</item>>
+    </style>
+    <style name="LIMEBaseKeyboard.Dark" parent = "LIMEBaseKeyboard">
 
         <item name="drawableArrowUp">@drawable/sym_keyboard_up_dark</item>
         <item name="drawableArrowDown">@drawable/sym_keyboard_down_dark</item>
@@ -198,13 +223,60 @@
         <item name="drawableArrowLeft">@drawable/sym_keyboard_left_dark</item>
     </style>
 
-    <style name="LIMEBaseKeyboardPink">
-
+    <style name="LIMEBaseKeyboard.Pink" parent = "LIMEBaseKeyboard">
         <item name="drawableArrowUp">@drawable/sym_keyboard_up_pink</item>
         <item name="drawableArrowDown">@drawable/sym_keyboard_down_pink</item>
         <item name="drawableArrowRight">@drawable/sym_keyboard_right_pink</item>
         <item name="drawableArrowLeft">@drawable/sym_keyboard_left_pink</item>
     </style>
+
+    <style name="LIMECandidateView">
+        <item name="suggestHighlight">@drawable/ic_suggest_scroll_background_hl</item>
+        <item name="voiceInputIcon">@drawable/sym_keyboard_voice_light</item>
+        <item name="ExpandButtonIcon">@drawable/ic_suggest_expander</item>
+        <item name="closeButtonIcon">@drawable/btn_close</item>
+
+        <item name="candidateBackground">@color/candidate_background</item>
+        <!-- color of  different types of candidates   -->
+        <item name="candidateNormalTextColor">@color/candidate_normal_text</item>
+        <item name="candidateNormalTextHighlightColor">@color/candidate_normal_text</item>
+        <item name="composingCodeColor">@color/limekeyboard_normal_key_color_light_hl</item>
+        <item name="composingCodeHighlightColor">@color/candidate_composing_code_highlight</item>
+        <!-- color of  spacer between candidate   -->
+        <item name="spacerColor">@color/candidate_spacer</item>
+        <!-- color of  selection key display for physical keyboard   -->
+        <item name="selKeyColor">@color/candidate_normal_text</item>
+        <item name="selKeyShiftedColor">@color/limekeyboard_normal_key_color_light_hl</item>
+        <!-- color of  composing text view above candidate view   -->
+        <item name="composingTextColor">@color/composing_text</item>
+        <item name="composingBackgroundColor">@color/composing_background</item>
+    </style>
+    <style name="LIMECandidateView.Light"  parent = "LIMECandidateView">
+        <item name="suggestHighlight">@drawable/ic_suggest_scroll_background_hl</item>
+        <item name="voiceInputIcon">@drawable/sym_keyboard_voice_light</item>
+        <item name="ExpandButtonIcon">@drawable/ic_suggest_expander</item>
+        <item name="closeButtonIcon">@drawable/btn_close</item>
+
+        <item name="candidateBackground">@color/candidate_background</item>
+        <!-- color of  different types of candidates   -->
+        <item name="candidateNormalTextColor">@color/limekeyboard_function_key_color_light</item>
+        <item name="candidateNormalTextHighlightColor">@color/candidate_normal_text</item>
+        <item name="composingCodeColor">@color/limekeyboard_normal_key_color_light_hl</item>
+        <item name="composingCodeHighlightColor">@color/candidate_composing_code_highlight</item>
+        <!-- color of  spacer between candidate   -->
+        <item name="spacerColor">@color/candidate_spacer</item>
+        <!-- color of  selection key display for physical keyboard   -->
+        <item name="selKeyColor">@color/candidate_normal_text</item>
+        <item name="selKeyShiftedColor">@color/limekeyboard_normal_key_color_light_hl</item>
+        <!-- color of  composing text view above candidate view   -->
+        <item name="composingTextColor">@color/composing_text</item>
+        <item name="composingBackgroundColor">@color/composing_background</item>
+    </style>
+    <style name="LIMECandidateView.Dark"  parent = "LIMECandidateView">
+    </style>
+    <style name="LIMECandidateView.Pink"  parent = "LIMECandidateView">
+    </style>
+
 
     <style name="Theme.AppCompat.Transparent" parent="@style/Theme.AppCompat.Light">
         <item name="android:windowNoTitle">true</item>
