--- a/LimeStudio/app/src/main/res/layout/candidatepopup.xml
+++ b/LimeStudio/app/src/main/res/layout/candidatepopup.xml
@@ -25,6 +25,7 @@
 
 <LinearLayout
   	xmlns:android="http://schemas.android.com/apk/res/android"
+	android:id="@+id/candidatePopupLayout"
   	android:baselineAligned="true"
   	android:orientation="vertical"
   	android:layout_width="match_parent"
