--- a/LimeStudio/app/src/main/res/values/colors.xml
+++ b/LimeStudio/app/src/main/res/values/colors.xml
@@ -15,7 +15,7 @@
   ~  *
   ~  **    This program is distributed in the hope that it will be useful,
   ~  **    but WITHOUT ANY WARRANTY; without even the implied warranty of
-  ~  **    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+  ~  **    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See thek
   ~  **    GNU General Public License for more details.
   ~  *
   ~  **    You should have received a copy of the GNU General Public License
@@ -26,6 +26,7 @@
 <resources>
     <!--candidate view-->
     <color name="candidate_normal_text">#FF0F0F0F</color>
+    <color name="candidate_normal_text_dark">#FFCFD8DC</color>
     <color name="candidate_inverted_text_physical_keyboard">#FFD05050</color>
     <color name="candidate_composing_code">#FFE35900</color>
     <color name="candidate_composing_code_highlight">#FFFAFAFA</color>
@@ -36,11 +37,14 @@
     <color name="candidate_selection_keys_shifted">#FFE35900</color>
     <color name="candidate_background">#FFFAFAFA</color>
     <color name="candidate_background_hl">#FFF29238</color>
+    <color name="candidate_background_dark">#FF141414</color>
     <!--fully transparent candidate container view-->
     <color name="candidate_container_background">#00FFFFFF</color>
     <!--composing text view-->
-    <color name="composing_text">#FF818181</color>
-    <color name="composing_background">#CCE1E1E1</color>
+    <color name="composing_text">#FF717171</color>
+    <color name="composing_background">#E0E1E1E1</color>
+    <color name="composing_background_dark">#E0141414</color>
+
 
     <!-- Preference -->
     <color name="preference_background">#bbffffff</color>
