--- a/LimeStudio/app/src/main/res/values/colors.xml
+++ b/LimeStudio/app/src/main/res/values/colors.xml
@@ -78,6 +78,12 @@
     <color name="limekeyboard_function_key_color_pink">#FFFFFFFF</color>
     <color name="limekeyboard_function_key_color_pink_hl">#FFC74A72</color>f
     <color name="limekeyboard_subkey_color_pink">#FFC74A72</color>
+    <color name="limekeyboard_background_pink">#FFFAD5E5</color>
+    <color name="limekeyboard_candidate_background_pink">#FFFEF3F7</color>
+    <color name="composing_background_pink">#E0FAD5E5</color>
+    <color name="limekeyboard_normal_key_background_pink">#FFF49AC1</color>
+    <color name="limekeyboard_function_key_background_pink">#FFF173AC</color>
+    <color name="limekeyboard_key_background_pink_hl">#FFF49AC1</color>
     <color name="limekeyboard_subkey_color_pink_hl">#FFFFFFFF</color>
 
 
