--- a/LimeStudio/app/src/main/res/anim/key_preview_fadein.xml
+++ b/LimeStudio/app/src/main/res/anim/key_preview_fadein.xml
@@ -25,8 +25,14 @@
 
 <set    xmlns:android="http://schemas.android.com/apk/res/android">
 
-
-    -- <alpha android:fromAlpha="0.7"  android:toAlpha="1.0"
-        android:interpolator="@android:anim/accelerate_interpolator"
-        android:duration="@integer/config_preview_fadein_anim_time" />
+    <scale
+        android:duration="@integer/config_preview_fade_in_anim_time"
+        android:fromXScale="0.94"
+        android:toXScale="1.00"
+        android:fromYScale="0.94"
+        android:toYScale="1"
+        android:pivotX="50%p"
+        android:pivotY="100%p"
+        >
+    </scale>
 </set>
