Tune pink theme

--- a/LimeStudio/app/src/main/res/drawable/btn_flat_keyboard_key_preview_pink.xml
+++ b/LimeStudio/app/src/main/res/drawable/btn_flat_keyboard_key_preview_pink.xml
@@ -29,7 +29,7 @@
         android:radius="3dp"
         />
     <solid
-        android:color="#FFC74A72"
+        android:color="@color/second_background_pink"
         />
     <padding
         android:left="1dp"
@@ -44,7 +44,7 @@
 
     <stroke
         android:width="2dp"
-        android:color="#FFFAD5E5"
+        android:color="@color/keyboard_background_pink"
         />
 
 </shape>
