--- a/LimeStudio/app/src/main/res/drawable/btn_flat_keyboard_normal_key_normal_pink.xml
+++ b/LimeStudio/app/src/main/res/drawable/btn_flat_keyboard_normal_key_normal_pink.xml
@@ -27,7 +27,7 @@
         android:radius="3dp"
         />
     <solid
-        android:color="#FFF49AC1"
+        android:color="@color/second_background_pink"
         />
     <padding
         android:left="1dp"
@@ -42,7 +42,7 @@
 
     <stroke
         android:width="1dp"
-        android:color="#FFFAD5E5"
+        android:color="@color/keyboard_background_pink"
         />
 
 </shape>
